--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,30 +14,42 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-format fixed-top navbar-expand-lg navbar-darkt">
+  <nav class="navbar navbar-format fixed-top navbar-expand-lg navbar-dark">
     <div class="container">
         <a class="navbar-brand navbar-title-format">
-          <img src="images/temp_horse_logo.png" width="40" height="40">
-          <b>  HorseRacer</b></a>
+          <img src="images/temp_horse_logo.png" width="60" height="40" class="d-inline-block align-top" alt="">
+          HorseRacer
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
             <ul class="navbar-nav ml-auto header-detail-items">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Login</a>
+                    <a class="nav-link" href="index.html">Username</a>
                 </li>
             </ul>
         </div>
     </div>
   </nav>
+  {{!-- <nav class="navbar fixed-top navbar-dark">
+    <a class="navbar-brand">
+      <img src="images/temp_horse_logo.png" width="60" height="40" class="d-inline-block align-top">
+      HorseRacer
+    </a>
+    <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+        <ul class="navbar-nav ml-auto header-detail-items">
+          <li class="nav-item active">
+              <a class="nav-link" href="index.html">Login</a>
+          </li>
+        </ul>
+    </div>
+  </nav> --}}
 
   {{{body}}}
 
-  <footer class="footer footer-details fixed-bottom text-center">
-      <div class="margin-top-25">
-          copyright ©
-      </div>
+  <footer class="footer footer-details fixed-bottom text-center">2019 © Copyright:
+      <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
   </footer>
 </body>
 
