--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,31 @@
+body  {
+  background-color: #eee8da;
+}
+
+.navbar-format {
+  background-color: #5D5C61 !important;
+  padding-bottom: unset !important;
+  padding-top: unset !important;
+  height: 60px
+}
+
 .list-group-item {
   line-height: 2.5;
+}
+
+.nav-link {
+  color: lightgray;
+}
+
+.footer-details {
+  height: 50px;
+  color: #ffffff;
+  background-color: #5D5C61;
+  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  /* position: sticky !important;     */
+}
+
+.container {
+  margin-top: 60px;
+  margin-bottom: 80px;
 }
