--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,33 +1,37 @@
-<div id="home">
-  <div class="container">
-    <div class="row">
-      <div class="col-8 offset-2">
-        <h1>{{msg}}</h1>
-        <h2>This is our Home Page!</h2>
-        <form class="clearfix mb-4" action="POST">
-          <div class="form-group">
-            <label for="example-text">Example Text</label>
-            <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
-          </div>
-          <div class="form-group">
-            <label for="example-description">Example Description</label>
-            <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
-          </div>
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
-        </form>
-        <h3>Examples:</h3>
-        <ul id="example-list" class="list-group">
-          {{#each examples}}
-          <li data-id="{{this.id}}" class="list-group-item">
-            <a href="example/{{this.id}}">{{this.text}}</a>
-            <button class="btn btn-danger float-right delete">ｘ</button>
-          </li>
-          {{/each}}
-        </ul>
-      </div>
+<div id="addhorsefrom">
+    <div class="container">
+        <div class="row">
+            <div class="col-8 offset-2">
+                <h1>{{msg}}</h1>
+                <h2>Gallop</h2>
+                <br>
+                <h6></h6>
+                <br>
+              
+                    <div class="searchForm">
+                        <label for="example-text">Search:</label>
+                        <input type="text" id="hn" class="form-control" aria-describedby="example-text" placeholder="Seabiscuit">
+                    </div>
+                    <div class="statSearch">
+                        <label for="exampleFormControlSelect1">Search by:</label>
+                        <select class="form-control horsetats" id="horsestats">
+                            <option>Horse ID</option>
+                            <option>Top Speed</option>
+                            <option>Endurance</option>
+                            <option>Acceleration</option>
+                            <option>Owner</option>
+                        </select>
+                    </div>
+                   
+                    <button id="Search" class="btn btn-primary float-right">Search</button>
+                </form>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
+
+
+{{!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> --}}
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/index.js"></script>
