--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -49,7 +49,7 @@
   {{{body}}}
 
   <footer class="footer footer-details fixed-bottom text-center">2019 © Copyright:
-      <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
+      <a href=""> Home</a>
   </footer>
 </body>
 
