--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<form action="/login" method="post">
+<form action="/{{user.type}}" method="post">
     <div>
         <label>Username:</label>
         <input type="text" name="username"/>
@@ -8,6 +8,9 @@
         <input type="password" name="password"/>
     </div>
     <div>
-        <input type="submit" value="Log In"/>
+        <input type="submit" value="{{user.type}}"/>
     </div>
 </form>
+<a href="/register">Register</a>
+ ||
+<a href="/login">Go To Login</a>
