--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,11 +3,11 @@
 <form action="/{{type}}" method="post">
     <div>
         <label>Username:</label>
-        <input type="text" name="username"/>
+        <input type="text" name="username" required/>
     </div>
     <div>
         <label>Password:</label>
-        <input type="password" name="password"/>
+        <input type="password" name="password" required/>
     </div>
     <div>
         <input type="submit" value="{{type}}"/>
