--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -29,3 +29,13 @@ body  {
   margin-top: 60px;
   margin-bottom: 80px;
 }
+
+/* .verifyModal{
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  display: table;
+} */
