--- a/views/horsebyowner.handlebars
+++ b/views/horsebyowner.handlebars
@@ -5,6 +5,7 @@
             <table class="table table-striped"></table>
             <thead>
                 <tr>
+                    <th>Owner Name</th>
                     <th>Horse Name</th>
                     <th>Horse Age</th>
                     <th>View Horse Statistics</th>
@@ -17,7 +18,7 @@
     </div>
 </div>
 
-
+{{!-- 
     <ul>
         {{#each horse}}
             <li>
@@ -31,4 +32,4 @@
                 <a href="/{{this.id}}">View Horse Stats</a>
             </li>
         {{/each}}
-    </ul>
+    </ul> --}}
