--- a/views/addhorseform.handlebars
+++ b/views/addhorseform.handlebars
@@ -12,6 +12,15 @@
                         <label for="example-text">Horse Name:</label>
                         <input type="text" id="hn" name="horse_name" class="form-control" aria-describedby="example-text" placeholder="Seabiscuit" required>
                     </div>
+
+                    {{!-- add owner username --}}
+                    <div class="form-group">
+                        <label for="example-text">Horse Owner (Username):</label>
+                        {{!-- <select class="custom-select" id="author"> --}}
+                        <input type="text" id="honame" name="owner_name" class="form-control" aria-describedby="example-text" placeholder="ebuelow" required>
+                        </select>
+                    </div>
+
                     <div class="form-group">
                         <label for="example-text">Horse's Age:</label>
                         <input type="number" id="hage" name="age" class="form-control" aria-describedby="example-text" placeholder="1" required>
