--- a/views/horsebyowner.handlebars
+++ b/views/horsebyowner.handlebars
@@ -1,22 +1,26 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-            <h1>Owner Data</h1>
-            <table class="table table-striped"></table>
-            <thead>
-                <tr>
-                    <th>Owner Name</th>
-                    <th>Horse Name</th>
-                    <th>Horse Age</th>
-                    <th>View Horse Statistics</th>
-                </tr>
-            </thead>
-            <tbody>
-                
-            </tbody>
+<div id="viewHorseByOwner">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <h1>Owner Data</h1>
+                {{!-- <table class="table table-striped"></table>
+                <thead>
+                    <tr>
+                        <th>Owner Name</th>
+                        <th>Horse Name</th>
+                        <th>Horse Age</th>
+                        <th>View Horse Statistics</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    
+                </tbody> --}}
+            </div>
         </div>
     </div>
 </div>
+
+
 
 {{!-- 
     <ul>
@@ -29,7 +33,7 @@
                 <p><span class="stat">Endurance:</span> {{this.author}}</p>
                 <p><span class="stat">Reliability:</span> {{this.author}}</p>
                 <p><span class="stat">Accerlation:</span> {{this.author}}</p> --}}
-                <a href="/{{this.id}}">View Horse Stats</a>
+                {{!-- <a href="/{{this.id}}">View Horse Stats</a>
             </li>
         {{/each}}
-    </ul> --}}
+    </ul> --}} 
