preparing to pull kieran's login

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   
-  <link rel="stylesheet" href="styles/styles.css" type="text/css" />
-  <script src="js/index.js"></script>
+  <link rel="stylesheet" href="/styles/styles.css" type="text/css" />
+  <script src="/js/index.js"></script>
 
   <title>Horse Racer</title>
 </head>
@@ -17,8 +17,8 @@
   <nav class="navbar navbar-format fixed-top navbar-expand-lg navbar-dark">
     <div class="container">
         <a class="navbar-brand navbar-title-format">
-          <img src="images/temp_horse_logo.png" width="60" height="40" class="d-inline-block align-top" alt="">
-          HorseRacer
+          <img src="/images/temp_horse_logo.png" width="60" height="40" class="d-inline-block align-top" alt="">
+          {{!-- HorseRacer --}}
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
