--- a/views/horsebyowner.handlebars
+++ b/views/horsebyowner.handlebars
@@ -3,6 +3,10 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h1>Owner Data</h1>
+                {{user}}
+                {{#each horses}}
+                    <div>{{this.horse_name}}</div>
+                {{/each}}
                 {{!-- <table class="table table-striped"></table>
                 <thead>
                     <tr>
