pushing a commit to get Kierans handlebars code

--- a/views/horsebyowner.handlebars
+++ b/views/horsebyowner.handlebars
@@ -1,4 +1,4 @@
-Test
+<h1>Test</h1>
     {{#each userHorses}}
         {{!-- in options we are pulling the primary key which is ID but priting the corresponding username --}}
         <div>{{this.horse_name}}</div>
