--- a/views/addhorseform.handlebars
+++ b/views/addhorseform.handlebars
@@ -52,6 +52,7 @@
                             <option>4</option>
                         </select>
                     </div>
+                    {{!-- On submit of form, post horse to Horsedb --}}
                     <div class="submitButton">
                         <button id="addHorse" class="btn btn-primary float-right">Submit</button>
                         <div id="matchModal" class="modal" role="dialog">
