--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-format fixed-top navbar-expand-lg navbar-dark">
+  <nav class="navbar navbar-format sticky-top navbar-expand-lg navbar-dark">
     <div class="container">
         <a class="navbar-brand navbar-title-format">
           <img src="/images/temp_horse_logo.png" width="60" height="40" class="d-inline-block align-top" alt="">
@@ -27,7 +27,7 @@
     </div>
   </nav>
   {{{body}}}
-  <footer class="footer footer-details fixed-bottom text-center">2019 © Copyright:
+  <footer class="footer footer-details text-center">2019 © Copyright:
       <a href=""> Home</a>
   </footer>
 </body>
