--- a/views/horsebyowner.handlebars
+++ b/views/horsebyowner.handlebars
@@ -1,7 +1,7 @@
 <div id="viewHorseByOwner">
     <div class="container">
         <div class="row">
-            <div class="col-md-8 offset-md-2">
+            <div class="col-md-12">
                 <div class="ownersHorse-container">
                     <h3>Owner Username: {{user}}</h3>
                     <table class="table table-striped">
