modified footer text

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,8 +29,8 @@
     </div>
   </nav>
   {{{body}}}
-  <footer class="footer footer-details text-center">2019 © Copyright:
-      <a href=""> Home</a>
+  <footer class="footer footer-details text-center">2019 © Copyright
+      {{!-- <a href=""> Home</a> --}}
   </footer>
 </body>
 
