--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,8 +28,12 @@
     </div>
   </nav>
   {{{body}}}
-  <footer class="footer footer-details text-center">2019 © Copyright
-      {{!-- <a href=""> Home</a> --}}
+  <footer class="footer footer-details text-center">
+    2019 © Copyright<br> || 
+    <a target="_blank" href="https://github.com/zekkxx">Kieran Anthony</a> || 
+    <a target="_blank" href="https://github.com/buelowek1225">Ellen Buelow</a> || 
+    <a target="_blank" href="https://github.com/christophcannz">Chris Cannday</a> || 
+    <a target="_blank" href="https://github.com/mikesnyder">Mike Snyder</a> || 
   </footer>
 </body>
 
