Added string length enforcement to pages.

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,12 +6,12 @@
                 <form action="/{{type}}" method="post">
                     <div class="form-group">
                         <label for="loginUsernameInput">Username</label>
-                        <input type="text" class="form-control" placeholder="Enter Username" name="username" required />
+                        <input type="text" class="form-control" placeholder="Enter Username" name="username" maxlength="16" required />
                     </div>
                     <div class="form-group">
                         <label for="loginPasswordInput">Password</label>
                         <input type="password" class="form-control" placeholder="Enter Password" name="password"
-                            required />
+                            maxlength="12" required />
                     </div>
                     <button type="submit" class="btn btn-primary" value="{{type}}"/>Submit</button>
                 </form>
