--- a/views/addhorseform.handlebars
+++ b/views/addhorseform.handlebars
@@ -12,7 +12,7 @@
                     <div class="form-group">
                         <label for="example-text">Horse Name:</label>
                         <input type="text" id="hn" name="horse_name" class="form-control"
-                            aria-describedby="example-text" placeholder="Seabiscuit" required>
+                            aria-describedby="example-text" placeholder="Seabiscuit" maxlength="16" required>
                     </div>
                     <div class="form-group">
                         <label for="example-text">Horse's Age:</label>
